Camlp5 Version 6.15:
--------------------

* [23 Sep 15] Updated for ocaml trunk current version (4.03.0).

Camlp5 Version 6.14:
--------------------

* [30 Jul 15] Updated for ocaml version 4.02.3 and 4.02.4

Camlp5 Version 6.13:
--------------------

* [20 Apr 15] Accept 'fun/try' case list like the change of 22nd Apr 13
  on 'match' in revised syntax, allowing them to write "|" .. "end" or
  "[" .. "]", both being accepted.
* [12 May 15] Updated for ocaml version 4.02.2

Camlp5 Version 6.12:
--------------------

* [17 Apr 14] Updated for ocaml trunk (4.02.0) svn rev 14621.
* [14 Apr 14] Updated for ocaml version 4.01.1.
* [19 Dec 13] Dummy line numbers are now 1 instead of -1 to prevent
  errors that sometimes happen later at assembling phase.
* [19 Dec 13] Fixed problem in top/Makefile when OCLIBDIR contains spaces.
* [06 Sep 13] Added flag Grammar.utf8_print to print grammars entries
  (with Grammar.Entry.print) displaying strings in utf-8 (default: True).
  Usefull e.g. for Coq in command 'Print Grammar constr' when using utf8.
* [27 Aug 13] Fixed bug in normal syntax: "let f { x } = ...", "{ x }"
  and "let open ..." were refused.

Camlp5 Version 6.11:
--------------------

* [22 Jul 13] Updated for ocaml version 4.01.0
* [02 Jul 13] Added 'MLast.loc_of_with_constr'.
* [02 Jul 13] Fixed bug toplevel with revised syntax; "= 'a" was missing
  in output in that example:
    # module type A = sig module type S = 'a; end;
    module type A = sig module type S; end
* [02 Jul 13] Now accept lowercase ident for module types, like ocaml does.
  Accepted also in revised syntax.

Camlp5 Version 6.10:
--------------------

* [19 Jun 13] Updated for ocaml version 4.01.0
* [14 Jun 13] (experimental) Now, in revised syntax, a "." followed by
  a newline is interpreted as a ";", allowing to end phrases with ".".
  Drawback: will syntax error when writing a record/module access in two
  lines ending the first one with "." like:
     foo.
     bar

Camlp5 Version 6.09: