@@ -1,4 +1,2 @@
-pconfig.cmo : pconfig.cmi
-pconfig.cmx : pconfig.cmi
-pconfig.cmi :
-warnings.cmi :
+pconfig.cmo: pconfig.cmi
+pconfig.cmx: pconfig.cmi
