@@ -1,6 +1,7 @@
 Camlp5 Version 6.15:
 --------------------
 
+* [26 Nov 15] Updated again for ocaml trunk current version (4.03.0).
 * [23 Sep 15] Updated for ocaml trunk current version (4.03.0).
 
 Camlp5 Version 6.14:
